<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_gradient"
    tools:context=".ui.signUp.SignUp">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/signUpToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/nunito"
                android:text="@string/signup_lbl"
                android:textColor="@color/white"
                android:textSize="22dp" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/user"
                    app:civ_circle_background_color="@color/purple_trans" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignRight="@+id/profilePic"
                    android:layout_alignBottom="@+id/profilePic"
                    android:layout_margin="2.5dp"
                    android:src="@drawable/addplus"
                    app:civ_circle_background_color="@color/red" />

            </RelativeLayout>

            <TextView
                android:id="@+id/userNameLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/nunito"
                android:text="@string/username_lbl"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/nunito"
                android:hint="@string/username_hint"
                android:padding="16dp"
                android:digits="@string/allow_digits"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white_800"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/emailLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/nunito"
                android:text="@string/email_lbl"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/edtEmailSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/nunito"
                android:hint="@string/email_hint"
                android:padding="16dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white_800"
                android:textSize="16dp" />


            <TextView
                android:id="@+id/passwordLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/nunito"
                android:text="@string/password_lbl"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:hintEnabled="false"

                app:passwordToggleDrawable="@drawable/toggle_pass"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edtPasswordSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_800"
                    android:textSize="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/confirmpasswordLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/nunito"
                android:text="@string/confirm_password_lbl"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etConfirmPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:hintEnabled="false"

                app:passwordToggleDrawable="@drawable/toggle_pass"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edtConfirmPasswordSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/confirm_password_hint"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_800"
                    android:textSize="16dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/signUpCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                app:cardBackgroundColor="@color/red"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/signup_lbl"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signuplbldesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/nunito"
                    android:text="@string/had_acccount_desc"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/signupTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/nunito"
                    android:text="@string/login_txt"
                    android:textColor="@color/red" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/progressBar"
        android:visibility="gone"
        layout="@layout/progress_bar"/>

</androidx.constraintlayout.widget.ConstraintLayout>