<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_gradient"
    tools:context=".ui.login.Login">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/loginToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/nunito"
                android:text="@string/login_txt"
                android:textColor="@color/white"
                android:textSize="22dp" />

        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginToolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            >

            <TextView
                android:id="@+id/emailLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/nunito"
                android:text="@string/email_username_lbl"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/edtEmailLgn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/nunito"
                android:singleLine="true"
                android:hint="@string/email_username_hint"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white_800"
                android:textSize="16dp" />


            <TextView
                android:id="@+id/passwordLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/nunito"
                android:text="@string/password_lbl"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:background="@android:color/transparent"
                app:passwordToggleDrawable="@drawable/toggle_pass"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edtPasswordLgn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/password_hint"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:padding="18dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_800"
                    android:textSize="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPasswordTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito"
                android:text="@string/login_forgot_pwd_lbl"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/loginCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                app:cardBackgroundColor="@color/red"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/login_txt"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/signuplbldesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:text="@string/signup_desc"
        android:textColor="@color/white"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signupTxt"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView2" />

    <TextView
        android:id="@+id/signupTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:fontFamily="@font/nunito"
        android:text="@string/signup_lbl"
        android:textColor="@color/red"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signuplbldesc"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView2" />

    <include
        android:id="@+id/progressBar"
        android:visibility="gone"
        layout="@layout/progress_bar"/>
</androidx.constraintlayout.widget.ConstraintLayout>