<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient"
    android:fitsSystemWindows="true"
    tools:context=".ui.signUp.SignUp"
    xmlns:android="http://schemas.android.com/apk/res/android">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/signUpToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/backArrowEditProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/back" />

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/nunito"
                    android:text="@string/edit_profile_lbl"
                    android:textColor="@color/white"
                    android:textSize="22dp" />

            </RelativeLayout>


        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpToolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profilePic"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/user"
                        app:civ_circle_background_color="@color/purple_trans" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignRight="@+id/profilePic"
                        android:layout_alignBottom="@+id/profilePic"
                        android:layout_margin="2.5dp"
                        android:src="@drawable/addplus"
                        app:civ_circle_background_color="@color/red" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/userNameLbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/nunito"
                    android:text="@string/username_lbl"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/edtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edittext_background"
                    android:digits="@string/allow_digits"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/username_hint"
                    android:maxLines="1"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_800"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/ageLbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/nunito"
                    android:text="@string/age_lbl"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/edtAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/age_hint"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_800"
                    android:textSize="16dp" />


                <TextView
                    android:id="@+id/LocationLbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/nunito"
                    android:text="@string/bio_lbl"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/edtDesignation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:maxHeight="120dp"
                    android:minHeight="80dp"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/bio_lbl"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_800"
                    android:textSize="16dp" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/updateCV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    app:cardBackgroundColor="@color/red"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/update_lbl"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <include
            layout="@layout/progress_bar"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
